--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 
     <!-- ENLACE AL ARCHIVO CSS SEPARADO -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Estilos.css">
 </head>
 <body>
     <header class="main-header">
@@ -160,3 +160,4 @@
     </script>
 </body>
 </html>
+
