--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         <!-- CARTEL DE TRABAJO EN PROCESO RESTAURADO -->
                         <div class="in-progress-notice">
                             <h3>⚙️ En Proceso de Configuración ⚙️</h3>
-                            <p>Estamos configurando el entorno Cloud y automatizando los primeros posts. ¡Volvemos pronto!</p>
-                            <p>Mientras tanto, puedes echar un vistazo a los <a href="#proyectos">Proyectos</a>.</p>
+                            <p>Estamos preparando la web y trabajando en proyectos. ¡Volvemos pronto!</p>
+                            //<p>Mientras tanto, puedes echar un vistazo a los <a href="#proyectos">Proyectos</a>.</p>
                         </div>
                         
                         <!-- La lista de artículos está vacía, lista para que la rellenes cuando quieras. -->
@@ -70,9 +70,9 @@
             <!-- Columna Lateral (Sidebar) -->
             <div class="ad-container">
                 <aside class="sidebar">
-                    <div class="ad-placeholder">
+                    //<div class="ad-placeholder">
                         [ESPACIO PARA ANUNCIO (Se puede eliminar)]
-                    </div>
+                    //</div>
                     
                     <div class="subscription-box">
                         <h3>🚀 Suscripción Rápida</h3>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 SysAdmin Blog. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Dani Tarragó Blog.</p>
             </div>
         </div>
     </footer>
@@ -160,4 +160,5 @@
     </script>
 </body>
 </html>
+
 
