--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="in-progress-notice">
                             <h3>⚙️ En Proceso de Configuración ⚙️</h3>
                             <p>Estamos preparando la web y trabajando en proyectos. ¡Volvemos pronto!</p>
-                            //<p>Mientras tanto, puedes echar un vistazo a los <a href="#proyectos">Proyectos</a>.</p>
+                            <!--<p>Mientras tanto, puedes echar un vistazo a los <a href="#proyectos">Proyectos</a>.</p>-->
                         </div>
                         
                         <!-- La lista de artículos está vacía, lista para que la rellenes cuando quieras. -->
@@ -70,7 +70,7 @@
             <!-- Columna Lateral (Sidebar) -->
             <div class="ad-container">
                 <aside class="sidebar">
-                    //<div class="ad-placeholder">
+                    <!--<div class="ad-placeholder">-->
                         [ESPACIO PARA ANUNCIO (Se puede eliminar)]
                     //</div>
                     
@@ -160,5 +160,6 @@
     </script>
 </body>
 </html>
+
 
 
