--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <main>
         <section class="hero-section">
             <div class="container">
-                <h1>Automatización, Cloud y Seguridad: El Blog de Sistemas</h1>
-                <p>Comparto proyectos, scripts y análisis de tendencias en DevOps y Cloud Computing.</p>
+                <h1>Automatización, Proyectos relacionados en Tecnología y más: El Blog de Sistemas</h1>
+                <p>Comparto proyectos, scripts y tendencias en administración de sistemas informáticos</p>
                 <a href="#articulos" class="btn btn-primary">Últimos Artículos</a>
             </div>
         </section>
@@ -68,11 +68,11 @@
             </div>
 
             <!-- Columna Lateral (Sidebar) -->
-            <div class="ad-container">
+            <!--<div class="ad-container">
                 <aside class="sidebar">
-                    <!--<div class="ad-placeholder">-->
+                    <div class="ad-placeholder">
                         [ESPACIO PARA ANUNCIO (Se puede eliminar)]
-                    //</div>
+                    </div>-->
                     
                     <div class="subscription-box">
                         <h3>🚀 Suscripción Rápida</h3>
@@ -160,6 +160,7 @@
     </script>
 </body>
 </html>
+
 
 
 
