--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <a href="/" class="logo">SysAdmin <strong>Blog</strong></a>
+            <a href="/" class="logo">TuBlog <strong>Informático</strong></a>
             <nav class="main-nav">
                 <button class="menu-toggle" aria-label="Abrir menú de navegación">☰</button>
                 <ul class="nav-list" id="navList">
@@ -160,6 +160,7 @@
     </script>
 </body>
 </html>
+
 
 
 
