Update HTML structure and content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SysAdmin Nexus: Blog Esquelético</title>
+    <title>Nexus Informático</title>
     <meta name="description" content="Blog personal de un Administrador de Sistemas especializado en DevOps y Cloud Computing (Versión Base Simple).">
     <meta name="keywords" content="SysAdmin, DevOps, Cloud Computing, Linux, IT">
     
@@ -160,6 +160,7 @@
     </script>
 </body>
 </html>
+
 
 
 
